Disable Autorotate-custom

--- a/camerakit/src/main/res/values/attrs.xml
+++ b/camerakit/src/main/res/values/attrs.xml
@@ -57,7 +57,8 @@
         </attr>
 
         <attr name="ckCropOutput" format="boolean" />
-
+        
+        <attr name="ckDisableAutoRotate" format="boolean" />
         <attr name="android:adjustViewBounds" />
 
     </declare-styleable>
